# flyBirdGame

./: CMakeLists.txt  README.md  birditem.cpp  birditem.h  gamescene.cpp  gamescene.h  gamewindow.cpp  gamewindow.h  main.cpp  pipeitem.cpp  pipeitem.h  roaditem.cpp  roaditem.h  startbtnitem.cpp  startbtnitem.h
